--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,13 @@ install:
   - phpenv rehash
 before_script:
     - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+    - export PATH="$HOME/.composer/vendor/bin:$PATH"
+    - |
+      if [[ ${TRAVIS_PHP_VERSION:0:2} == "7." ]]; then
+        composer global require "phpunit/phpunit=5.7.*"
+      else
+        composer global require "phpunit/phpunit=4.8.*"
+      fi
     - phpenv rehash
 script:
      grunt travis
