--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "wordpress-plugin"
     ],
     "textdomain": "visualizer",
+    "category": "plugins",
     "author": "ThemeIsle <friends@themeisle.com>",
     "license": "GPL-2.0+",
     "bugs": {
