fixed design and composer info.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "codeinwp/easy-content-types",
+  "name": "codeinwp/visualizer",
   "description": "Visualizer for WordPress.",
   "keywords": [
     "wordpress",
