added wraith for travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,14 @@ php:
     - "5.4"
     - "5.3"
     - "5.2"
+matrix:
+  include:
+  - php: "7.0"
+    before_install: chmod +x bin/wraith.sh
+    install: true
+    before_script:
+    env: TEST_SUITE=Wraith_Visual_Regression_Testing WRAITH_FAIL=5
+    script:  ./bin/wraith.sh
 sudo: false
 branches:
   except:
