--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ php:
     - "5.2"
 matrix:
   include:
+  - php: "5.6"
     before_install: chmod +x bin/wraith.sh
     install: true
     before_script:
@@ -56,7 +57,7 @@ deploy:
   on:
     repo: "$UPSTREAM_REPO"
     branch: "$MASTER_BRANCH"
-    condition: $TRAVIS_PHP_VERSION = "7.0"
+    condition: $TEST_SUITE = "Wraith_Visual_Regression_Testing"
 after_deploy:
 - chmod +x bin/deploy.sh
 - ". ./bin/deploy.sh"
