--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,11 @@ env:
   matrix:
   - WP_VERSION=latest WP_MULTISITE=0
   global:
-  - MASTER_BRANCH=master UPSTREAM_REPO=Codeinwp/visualizer-pro STORE_URL=https://themeisle.com LITE_REPO=visualizer
-    DEPLOY_BUILD=7.0
+  - MASTER_BRANCH=master UPSTREAM_REPO=Codeinwp/visualizer-pro STORE_URL=https://themeisle.com
+    LITE_REPO=visualizer DEPLOY_BUILD=7.0
 before_install:
+- openssl aes-256-cbc -K $encrypted_794a7a2c76e1_key -iv $encrypted_794a7a2c76e1_iv
+  -in key.enc -out key -d
 - mkdir -p bin && cd bin
 - wget "$PIRATE_FLEET"load.sh
 - cd .. && chmod +x bin/load.sh
