--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lasttranslator": "Themeisle Translate Team <friends@themeisle.com>"
   },
   "devDependencies": {
-    "grunt-plugin-fleet": "codeinwp/grunt-plugin-fleet",
+    "grunt-plugin-fleet": "github:codeinwp/grunt-plugin-fleet",
     "load-project-config": "~0.2.0"
   },
   "wraithSlug": [
