Fix dist precise.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,16 +5,17 @@ php:
 - '5.6'
 - '5.5'
 - '5.4'
-- '5.3'
 sudo: false
-dist: precise
 matrix:
+  fast_finish: true
   include:
   - php: '5.6'
     install: true
     before_script: chmod +x bin/wraith.sh
     env: TEST_SUITE=Wraith_Visual_Regression_Testing WRAITH_FAIL=5
     script: "./bin/wraith.sh"
+  - php: '5.3'
+    dist: precise
 branches:
   except:
   - "/^*-v[0-9]/"
