Adds travis allowed failure. Bump version.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ matrix:
     script: "./bin/wraith.sh"
   - php: '5.3'
     dist: precise
+  allow_failures:
+    - env: TEST_SUITE=Wraith_Visual_Regression_Testing WRAITH_FAIL=5
 branches:
   except:
   - "/^*-v[0-9]/"
