--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "codeinwp/visualizer",
-  "description": "Visualizer for WordPress.",
+  "description": "Visualizer charts for WordPress.",
   "keywords": [
     "wordpress",
     "charts",
