--- a/classes/Visualizer/Gutenberg/package.json
+++ b/classes/Visualizer/Gutenberg/package.json
@@ -33,6 +33,7 @@
 		"eslint-config-wordpress": "^2.0.0",
 		"eslint-loader": "^2.1.1",
 		"eslint-plugin-react": "^7.11.1",
+		"file-loader": "^4.0.0",
 		"mini-css-extract-plugin": "^0.4.4",
 		"node-sass": "^4.10.0",
 		"postcss-loader": "^3.0.0",
