--- a/classes/Visualizer/Gutenberg/package.json
+++ b/classes/Visualizer/Gutenberg/package.json
@@ -17,7 +17,8 @@
 		"merge": "^1.2.1",
 		"react": "16.4.1",
 		"react-google-charts": "^3.0.8",
-		"react-json-editor-ajrm": "^2.5.8"
+		"react-json-editor-ajrm": "^2.5.8",
+		"uuid": "^3.3.3"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.1.6",
