build: fix version of phpoffice/phpspreadsheet dep to the last known working version , ref: @contactashish13

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   "require": {
     "codeinwp/themeisle-sdk": "master",
     "xrstf/composer-php52": "^1.0.20",
-    "phpoffice/phpspreadsheet": "^1.6.0",
+    "phpoffice/phpspreadsheet": "1.8.2",
     "neitanod/forceutf8": "~2.0"
   },
   "autoload": {
