--- a/.distignore
+++ b/.distignore
@@ -21,3 +21,7 @@ package-lock.json
 key.enc
 vendor/phpoffice/phpexcel/Examples
 vendor/phpoffice/phpexcel/unitTests
+cypress
+docker-compose.travis.yml
+cypress.env.json.template
+cypress.json
