--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: php
 sudo: false
 dist: trusty
+services:
+    - docker
 matrix:
   fast_finish: true
   include:
@@ -14,6 +16,14 @@ matrix:
       before_script: chmod +x bin/wraith.sh
       env: TEST_SUITE=Wraith_Visual_Regression_Testing WRAITH_FAIL=5
       script: "./bin/wraith.sh"
+    - name: Cypress
+      #if: branch = development
+      language: node_js
+      node_js:
+        - 10.8
+      script:
+        - docker-compose -f docker-compose.travis.yml up -d
+        - chmod +x ./bin/run-e2e-tests.sh ./bin/wp-init.sh && ./bin/wp-init.sh && ./bin/run-e2e-tests.sh
   allow_failures:
     - env: TEST_SUITE=Wraith_Visual_Regression_Testing WRAITH_FAIL=5
 branches:
