change errors to warnings

--- a/classes/Visualizer/Gutenberg/.eslintrc
+++ b/classes/Visualizer/Gutenberg/.eslintrc
@@ -16,11 +16,11 @@
     ],
     "rules": {
         "indent": [
-            "error",
+            "warn",
             "tab"
         ],
         "linebreak-style": [
-            "error",
+            "warn",
             "unix"
         ],
         "quotes": [
