run cypress only for PRs

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ matrix:
       env: TEST_SUITE=Wraith_Visual_Regression_Testing WRAITH_FAIL=5
       script: "./bin/wraith.sh"
     - name: Cypress
+      if: type IN (pull_request)
       language: node_js
       node_js:
         - 10.8
