--- a/classes/Visualizer/Gutenberg/package.json
+++ b/classes/Visualizer/Gutenberg/package.json
@@ -10,12 +10,14 @@
 	"license": "MIT",
 	"dependencies": {
 		"@handsontable/react": "^1.1.0",
+		"chart.js": "^2.9.3",
 		"classnames": "^2.2.6",
 		"deep-filter": "^1.0.2",
 		"handsontable": "^5.0.2",
 		"is-plain-object": "^2.0.4",
 		"merge": "^1.2.1",
 		"react": "16.4.1",
+		"react-chartjs-2": "^2.9.0",
 		"react-google-charts": "^3.0.8",
 		"react-json-editor-ajrm": "^2.5.8",
 		"uuid": "^3.3.3"
