--- a/classes/Visualizer/Gutenberg/package.json
+++ b/classes/Visualizer/Gutenberg/package.json
@@ -15,6 +15,7 @@
 		"deep-filter": "^1.0.2",
 		"handsontable": "^5.0.2",
 		"is-plain-object": "^2.0.4",
+		"lodash": "^4.17.15",
 		"merge": "^1.2.1",
 		"react": "16.4.1",
 		"react-chartjs-2": "^2.9.0",
