--- a/classes/Visualizer/Gutenberg/package.json
+++ b/classes/Visualizer/Gutenberg/package.json
@@ -18,6 +18,7 @@
 		"react": "16.4.1",
 		"react-google-charts": "^3.0.8",
 		"react-json-editor-ajrm": "^2.5.8",
+		"sprintf-js": "^1.1.2",
 		"uuid": "^3.3.3"
 	},
 	"devDependencies": {
