--- a/classes/Visualizer/Gutenberg/package.json
+++ b/classes/Visualizer/Gutenberg/package.json
@@ -11,6 +11,7 @@
 	"dependencies": {
 		"@handsontable/react": "^1.1.0",
 		"chart.js": "^2.9.3",
+		"chartjs": "^0.3.24",
 		"classnames": "^2.2.6",
 		"deep-filter": "^1.0.2",
 		"handsontable": "^5.0.2",
