--- a/cypress/package.json
+++ b/cypress/package.json
@@ -8,6 +8,8 @@
   "license": "GPL-2.0+",
   "devDependencies": {
     "cypress": "^3.4.1",
-    "cypress-file-upload": "^3.3.4"
+    "cypress-file-upload": "^3.3.4",
+    "@wordpress/core-data": "master",
+    "@wordpress/edit-post": "master"
   }
 }
