build: install @wordpress packages

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "cypress-file-upload": "^3.3.4",
     "grunt-helpscout-faq": "~0.1.0",
     "grunt-plugin-fleet": "github:codeinwp/grunt-plugin-fleet",
-    "load-project-config": "~0.2.0"
+    "load-project-config": "~0.2.0",
+    "@wordpress/core-data": "master",
+    "@wordpress/edit-post": "master"
   },
   "wraithSlug": [
     "visualizer"
