--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ branches:
   - "/^*-v[0-9]/"
 env:
   matrix:
-  - WP_VERSION=latest WP_MULTISITE=0
+  - WP_VERSION=master WP_MULTISITE=0
   global:
   - MASTER_BRANCH=master UPSTREAM_REPO=Codeinwp/visualizer STORE_URL=https://themeisle.com
    DEPLOY_BUILD=7.0
