--- a/cypress/docker-compose.yml
+++ b/cypress/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.3'
 services:
   cypress:
+    ipc: host
     image: "cypress/included:3.8.2"
     network_mode: "host"
     environment:
