--- a/classes/Visualizer/Gutenberg/.eslintrc
+++ b/classes/Visualizer/Gutenberg/.eslintrc
@@ -15,6 +15,8 @@
         "react"
     ],
     "rules": {
+        "dot-notation": "off",
+        "lines-around-comment": "off",
         "indent": [
             "off",
             "tab"
