fix: remove 5.2 compatibility causing autoloader to fail

--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,13 @@
     "issues": "https://github.com/Codeinwp/visualizer/issues",
     "source": "https://github.com/Codeinwp/visualizer"
   },
+  "config": {
+    "platform": {
+      "php": "5.6"
+    }
+  },
   "require": {
     "codeinwp/themeisle-sdk": "master",
-    "xrstf/composer-php52": "^1.0.20",
     "phpoffice/phpspreadsheet": "1.8.2",
     "neitanod/forceutf8": "~2.0"
   },
@@ -33,16 +37,5 @@
     ]
   },
   "minimum-stability": "dev",
-  "prefer-stable": true,
-  "scripts": {
-    "post-install-cmd": [
-      "xrstf\\Composer52\\Generator::onPostInstallCmd"
-    ],
-    "post-update-cmd": [
-      "xrstf\\Composer52\\Generator::onPostInstallCmd"
-    ],
-    "post-autoload-dump": [
-      "xrstf\\Composer52\\Generator::onPostInstallCmd"
-    ]
-  }
+  "prefer-stable": true
 }
