--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -2,7 +2,7 @@ name: Test e2e
 
 on:
   push:
-    types: [opened, synchronize, ready_for_review]
+    branches-ignore: master
 jobs:
   e2e:
     name: E2E for ${{ matrix.env }}
