--- a/.github/workflows/create-tag.yml
+++ b/.github/workflows/create-tag.yml
@@ -27,6 +27,8 @@ jobs:
           CI: true
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
           GIT_AUTHOR_NAME: themeisle[bot]
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_ANNOUNCEMENTS }}
+          SEMANTIC_RELEASE_PACKAGE: Visualizer(free)
           GIT_AUTHOR_EMAIL: ${{ secrets.BOT_EMAIL }}
           GIT_COMMITTER_NAME: themeisle[bot]
           GIT_COMMITTER_EMAIL: ${{ secrets.BOT_EMAIL }}
