slackify markdown before posting the release notes

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -15,6 +15,7 @@ plugins:
   - - "semantic-release-slack-bot"
     - notifyOnSuccess: false
       notifyOnFail: false
+      markdownReleaseNotes: true
       branchesConfig:
         - pattern: master
           notifyOnSuccess: true
