Add PHPUnit dependencies package #859

--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,7 @@
   "require-dev": {
     "wp-coding-standards/wpcs": "1.2.1",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
-    "phpcompatibility/phpcompatibility-wp": "*"
+    "phpcompatibility/phpcompatibility-wp": "*",
+    "yoast/phpunit-polyfills": "^1.0"
   }
 }
