--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,6 @@
   "require-dev": {
     "wp-coding-standards/wpcs": "1.2.1",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
-    "phpcompatibility/phpcompatibility-wp": "*",
-    "yoast/phpunit-polyfills": "^1.0"
+    "phpcompatibility/phpcompatibility-wp": "*"
   }
 }
