--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,9 @@
     "optimize-autoloader": true,
     "platform": {
       "php": "5.6"
+    },
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   },
   "require-dev": {
