--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -15,13 +15,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-          env: ["default","gutenberg", "gutenberg-datatable"]
+        env: ["default", "gutenberg", "gutenberg-datatable"]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: "14"
       - uses: actions/cache@v2
         id: npm-and-build-cache
         with:
@@ -49,3 +49,17 @@ jobs:
           install: ${{ ! steps.npm-and-build-cache.outputs.cache-hit }}
           headless: true
           spec: cypress/integration/${{ matrix.env }}/**/*
+      - name: Upload tests screenshots
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: cypress-screenshots
+          path: ./cypress/screenshots/
+          retention-days: 5
+      - name: Upload tests videos
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: cypress-videos
+          path: ./cypress/videos/
+          retention-days: 5
