--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -15,13 +15,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-          env: ["default","gutenberg", "gutenberg-datatable"]
+        env: ["default", "gutenberg", "gutenberg-datatable"]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: "18"
       - uses: actions/cache@v2
         id: npm-and-build-cache
         with:
@@ -32,20 +32,22 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - name: Install npm deps
-        run: npm ci
+        run: |
+          npm ci
+          npx playwright install --with-deps chromium
       - name: Install composer deps
         run: composer install --no-dev
       - name: Install environment
         run: |
           npm run up:ci
-          bash ./bin/run-e2e-tests-${{matrix.env}}.sh
-      - name: Run ${{ matrix.env }} Cypress tests
+      - name: Run the tests
+        run: |
+          npm run test:e2e:playwright
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
-        uses: cypress-io/github-action@v2
+      - name: Archive test results
+        uses: actions/upload-artifact@v4
         with:
-          env: host=localhost,port=8080
-          browser: chrome
-          install: ${{ ! steps.npm-and-build-cache.outputs.cache-hit }}
-          headless: true
-          spec: cypress/integration/${{ matrix.env }}/**/*
+          name: code-coverage-report
+          path: artifacts
+          retention-days: 3
