--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,9 +1,8 @@
-version: '3.3'
+version: '3.7'
 
 services:
   mysql:
-    platform: linux/x86_64
-    image: mysql:5.7
+    image: mariadb:lts
     volumes:
       - ./bin/mysql:/docker-entrypoint-initdb.d
     environment:
@@ -19,7 +18,6 @@ services:
       - wpcore:/var/www/html/
       - .:/var/www/html/wp-content/plugins/visualizer/
     depends_on:
-      - mysql
       - wordpress
     environment:
       - WORDPRESS_DB_NAME=wordpress
