--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -9,7 +9,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   e2e:
-    name: E2E for ${{ matrix.env }}
+    name: Playwright E2E tests
     env:
       DOCKER_FILE: docker-compose.ci.yml
     strategy:
@@ -48,6 +48,6 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: code-coverage-report
+          name: e2e-playwright-results
           path: artifacts
           retention-days: 3
