--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -50,4 +50,5 @@ jobs:
         with:
           name: e2e-playwright-results
           path: artifacts
-          retention-days: 3
+          retention-days: 1
+          if-no-files-found: ignore
