--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   },
   "require": {
     "codeinwp/themeisle-sdk": "^3.3",
-    "phpoffice/phpspreadsheet": "1.8.2",
+    "phpoffice/phpspreadsheet": "^1.8",
     "neitanod/forceutf8": "~2.0"
   },
   "autoload": {
