chore: update npm packages to latest versions

--- a/classes/Visualizer/Gutenberg/package.json
+++ b/classes/Visualizer/Gutenberg/package.json
@@ -15,32 +15,34 @@
 		"handsontable": "^5.0.2",
 		"is-plain-object": "^2.0.4",
 		"merge": "^1.2.1",
-		"react": "16.4.1",
+		"react": "18.3.1",
+		"react-dom": "^18.3.1",
 		"react-google-charts": "^3.0.8",
 		"react-json-editor-ajrm": "^2.5.8",
 		"sprintf-js": "^1.1.2",
-		"uuid": "^3.3.3"
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.1.6",
+		"@babel/core": "^7.21.0",
 		"@babel/plugin-proposal-object-rest-spread": "^7.0.0",
 		"@babel/plugin-transform-async-to-generator": "^7.1.0",
 		"@babel/plugin-transform-react-jsx": "^7.1.6",
 		"@babel/preset-env": "^7.1.6",
-		"autoprefixer": "^9.3.1",
-		"babel-loader": "^8.0.4",
-		"cross-env": "3.2.4",
-		"css-loader": "^1.0.1",
-		"eslint": "^5.7.0",
+		"autoprefixer": "^10.4.0",
+		"babel-loader": "^9.1.0",
+		"cross-env": "7.0.3",
+		"css-loader": "^6.5.0",
+		"eslint": "^6.0.0",
 		"eslint-config-wordpress": "^2.0.0",
-		"eslint-loader": "^2.1.1",
-		"eslint-plugin-react": "^7.11.1",
-		"file-loader": "^4.0.0",
-		"mini-css-extract-plugin": "^0.4.4",
-		"node-sass": "^4.10.0",
-		"postcss-loader": "^3.0.0",
-		"sass-loader": "^7.1.0",
-		"webpack": "^4.25.1",
-		"webpack-cli": "^3.1.2"
+		"eslint-loader": "^4.0.0",
+		"eslint-plugin-react": "^7.30.0",
+		"file-loader": "^6.0.0",
+		"mini-css-extract-plugin": "^2.4.5",
+		"node-sass": "^7.0.0",
+		"postcss-loader": "^6.2.1",
+		"sass-loader": "^12.0.0",
+		"webpack": "^5.74.0",
+		"webpack-cli": "^4.10.0",
+		"terser-webpack-plugin": "^5.3.10"
 	}
 }
