dev: add PHPStan level 6 with baseline

--- a/.github/workflows/test-php.yml
+++ b/.github/workflows/test-php.yml
@@ -51,3 +51,20 @@ jobs:
           composer install --prefer-dist --no-progress  --no-dev
       - name: Run phpunit
         run: phpunit
+
+  phpstan:
+    name: PHPStan
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup PHP version
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: "7.4"
+          extensions: simplexml
+      - name: Checkout source code
+        uses: actions/checkout@v4
+      - name: Install composer
+        run: |
+          composer install --prefer-dist --no-progress
+      - name: Run phpstan
+        run: composer run phpstan
